--- a/index.html
+++ b/index.html
@@ -10,5 +10,7 @@
 <body>
   <h1>i can push to </h1>  
   <p>Pronob roy bormon</p>
+  <h4>i am a develapor</h4>
+  <img style="width: 200px; height: 170px;" src="images/pic1.jpg" alt="pic">
 </body>
 </html>
